refactor: move location kafka consumer to a different folder; remove persons api from the original api
