# docs/UdaConnectAPI_swagger.json
@@ -67,52 +67,6 @@
                 ]
             }
         },
-        "/api/persons": {
-            "post": {
-                "responses": {
-                    "200": {
-                        "description": "Success"
-                    }
-                },
-                "operationId": "post_persons_resource",
-                "tags": [
-                    "UdaConnect"
-                ]
-            },
-            "get": {
-                "responses": {
-                    "200": {
-                        "description": "Success"
-                    }
-                },
-                "operationId": "get_persons_resource",
-                "tags": [
-                    "UdaConnect"
-                ]
-            }
-        },
-        "/api/persons/{person_id}": {
-            "parameters": [
-                {
-                    "in": "path",
-                    "description": "Unique ID for a given Person",
-                    "name": "person_id",
-                    "required": true,
-                    "type": "string"
-                }
-            ],
-            "get": {
-                "responses": {
-                    "200": {
-                        "description": "Success"
-                    }
-                },
-                "operationId": "get_person_resource",
-                "tags": [
-                    "UdaConnect"
-                ]
-            }
-        },
         "/api/persons/{person_id}/connection": {
             "parameters": [
                 {
